--- a/analysis/05_compareMethodsBcells.Rmd
+++ b/analysis/05_compareMethodsBcells.Rmd
@@ -33,7 +33,10 @@ source(here("code/utility.R"))
 
 # Load data
 
-We are using publicly available EPIC data [GSE45459](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE45459) generated from developing human B-cells. The data is normalised and filtered (bad probes, multi-mapping probes, SNP probes, sex chromosomes).
+We are using publicly available 450K data [GSE45459](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE45459) generated from developing human B-cells. Specifically, the `GSE45459_Matrix_signal_intensities.txt.gz` file should be 
+downloaded and placed in the `data\datasets` directory and unzipped using `gunzip GSE45459_Matrix_signal_intensities.txt.gz`. 
+
+The data is then normalised and filtered (bad probes, multi-mapping probes, SNP probes, sex chromosomes).
 
 ```{r, message=FALSE, warning=FALSE}
 # load data
@@ -129,7 +132,7 @@ saveRDS(p[[1]], fig, compress = FALSE)
 
 ## Statistical analysis
 
-Compare several sets of sorted immune cells. Consider results significant at FDR < 0.05 and delta beta > 10% (~ lfc = 0.5).
+Compare Stage 1 and Stage 2 of pre B-cell development. Consider results significant at FDR < 0.05 and delta beta > 10% (~ lfc = 0.5).
 
 ```{r}
 mVals <- getM(fltGr)
@@ -192,15 +195,13 @@ saveRDS(p, fig, compress = FALSE)
 
 # Compare performance of different gene set testing methods
 
-We compare the performance of the following gene set testing methods available for methylation arrays: a standard hypergeometric test (HGT), GOmeth from the *missMethyl* package, methylglm (mGLM), methylRRA-ORA (mRRA (ORA)) and methylRRA-GSEA (mRRA (GSEA)) from the *methylGSA* package and ebayGSEA from the *ChAMP* package. 
+We compare the performance of the following gene set testing methods available for methylation arrays: a standard hypergeometric test (HGT), GOmeth from the *missMethyl* package, methylglm (mGLM), methylRRA-ORA (mRRA (ORA)) and methylRRA-GSEA (mRRA (GSEA)) from the *methylGSA* package and ebGSEA from GitHub at [https://github.com/aet21/ebGSEA](https://github.com/aet21/ebGSEA). 
 
 We perform gene set testing on the results of all three blood cell type comparisons: B-cells vs. NK cells, CD4 T-cells vs. CD8 T-cells and monocytes vs. neutrophils, using all of the different gene set testing methods.
 
-Gene set testing is performed for each comparison using GO categories, KEGG pathways and the BROAD MSigDB gene sets for the following methods: HGT, GOmeth, mGLM, mRRA (ORA) and mRRA (GSEA)
+Gene set testing is performed for each comparison using GO categories, KEGG pathways and the BROAD MSigDB gene sets for the following methods: HGT, GOmeth, mGLM, mRRA (ORA), mRRA (GSEA), ebGSEA (WT) and ebGSEA (KPMT).
 
-As gene set testing can only be performed using the BROAD MSigDB gene sets provided with the *ChAMP* package, the ebayGSEA method is only tested using the BROAD MSigDB gene sets for the three blood cell comparisons.
-
-Furthermore, as the methylGSA methods do not work well with sets that only contain very few genes or very many genes, we only test sets with at least 5 genes and at most 5000 genes. 
+As the methylGSA methods do not work well with sets that only contain very few genes or very many genes, we only test sets with at least 5 genes and at most 5000 genes. 
 
 Firstly, the results of the statistical analysis of the three blood cell comparisons are saved as an RDS object.
 
@@ -227,7 +228,7 @@ if(!file.exists(outFile)){
 ```
 
 As some of the methods take a considerable amount of time to perform the gene set testing analysis, we have created several scripts in order to run the analyses in parallel on a HPC.
-The code used to run all the gene set testing analyses using the different methods can be found in the `code/compare-methods` directory. It consists of four scripts: `genRunMethodJob.R`, `runChAMP.R`, `runMethylGSA.R` and `runMissMethyl.R`. The `genRunMethodJob.R` script creates and submits [Slurm](https://slurm.schedmd.com/overview.html) job scripts that run the `runChAMP.R`, `runMethylGSA.R` and `runMissMethyl.R` scripts, for *each* gene set type, in parallel, on a HPC. The results of each job are saved as an RDS file named `{package}.{set}.rds` in the `output/compare-methods` directory. Once all analysis jobs are complete, all of the suvbsequent analyses in this document can be executed.
+The code used to run all the gene set testing analyses using the different methods can be found in the `code/compare-methods` directory. It consists of four scripts: `genRunMethodJob.R`, `runebGSEA.R`, `runMethylGSA.R` and `runMissMethyl.R`. The `genRunMethodJob.R` script creates and submits [Slurm](https://slurm.schedmd.com/overview.html) job scripts that run the `runebGSEA.R`, `runMethylGSA.R` and `runMissMethyl.R` scripts, for *each* gene set type, in parallel, on a HPC. The results of each job are saved as an RDS file named `{package}.{set}.rds` in the `output/compare-methods/BCELLS` directory. Once all analysis jobs are complete, all of the subsequent analyses in this document can be executed
 
 ## Load output for all methods
 
@@ -258,7 +259,8 @@ cpgEgGo %>%
   group_by(GO) %>%
   summarise(med = median(Freq)) -> medCpgEgGo
 ```
-In order to examine whether the probe-number bias influenced the significantly enriched GO categories for the five different methods, we split the GO categories into bins based on the median number of CpGs per gene per GO category. We then calculated the proportion of significantly enriched GO categories in each bin for each of the three comparisons. As GOmeth explicitly corrects for this bias it showed very little trend. However mRRA (ORA) tended to have more significant GO categories when the genes had larger numbers of CpGs. The hypergeometric test and mRRA (GSEA) tended to have more significant GO categories with average numbers of CpGs associated per gene ranging from 27 - 44. The mGLM method appears to control for the probe-number bias of the array fairly well.
+
+In order to examine whether the probe-number bias influenced the significantly enriched GO categories for the different methods, we split the GO categories into bins based on the median number of CpGs per gene per GO category. We then calculated the proportion of significantly enriched GO categories in each bin for each of the three comparisons. Apart from mRRA (GSEA), none of the methods showed a trend related to siez of GO categories.
 
 ```{r}
 dat %>% filter(set == "GO") %>%
@@ -290,7 +292,7 @@ p <- ggplot(pdat, aes(x = as.numeric(bin), y = prop, color = method)) +
 p
 ```
 
-We also examine results when top ranked 100 GO terms from RNA-seq analysis of the same cell type comparisons is used as "truth".
+We also examine results when top ranked 100 GO terms from gene expression array analysis of the same B-cell development stage comparisons is used as "truth".
 
 ```{r}
 immuneGO <- unique(read.csv(here("data/genesets/GO-immune-system-process.txt"),
@@ -501,7 +503,7 @@ Now test KEGG pathways with at least 5 genes and 5000 at most.
 
 Again, as we are comparing immune cells we expect pathways from the following categories to be highly ranked: Immune system, Immune disease, Signal transduction, Signaling molecules and interaction; [https://www.genome.jp/kegg/pathway.html](https://www.genome.jp/kegg/pathway.html). 
 
-Examine results when top ranked 100 KEGG pathways from RNA-seq analysis of the same cell type comparisons is used as "truth".
+Examine results when top ranked 100 KEGG pathways from gene expression array analysis of the same B-cell development stage comparisons is used as "truth".
 
 ```{r}
 immuneKEGG <- read.csv(here("data/genesets/kegg-immune-related-pathways.csv"), 
@@ -701,7 +703,7 @@ p
 
 ### BROAD gene sets
 
-As the ebGSEA method from the ChAMP package only allows testing of their in-built database of Broad Institute gene sets, we will compare to other methods by testing these same gene sets. Using the top 100 ranked gene sets as identified by Belinda's `gsaseq` analysis of the corresponding Array data as "truth".
+Compare methods by testing the in-built database of Broad Institute gene sets provided with the *ChAMP*. Using the top 100 ranked gene sets as identified by `gsaseq` analysis of the corresponding B-cell development stages data as "truth".
 
 ```{r}
 rnaseqBROAD <- readRDS(here("data/cache-rnaseq/RNAseq-GSE45460-BROAD-GSA.rds"))
